jdk8: fix all warning errors in command line build